ajout generateur, google sign in

--- a/index.html
+++ b/index.html
@@ -391,16 +391,25 @@
         </div>
     </div>
 
-    <div style="text-align: center; margin-top: 40px;">
+    <!-- Section Boutons - Affichés seulement si connecté -->
+    <div id="buttonsSection" style="display: none; text-align: center; margin-top: 40px;">
         <a href="generateur.html" class="back-button">➕ Créer une nouvelle fiche</a>
     </div>
 
-    <div class="info-box">
-        ℹ️ <strong>Astuce :</strong> Vous pouvez ajouter manuellement des fiches existantes à la liste en cliquant sur le bouton ci-dessous.
+    <div id="infoSection" style="display: none;">
+        <div class="info-box">
+            ℹ️ <strong>Astuce :</strong> Vous pouvez ajouter manuellement des fiches existantes à la liste en cliquant sur le bouton ci-dessous.
+        </div>
+
+        <div style="text-align: center;">
+            <button class="btn-search" onclick="ouvrirModalAjout()">🔍 Ajouter une fiche existante</button>
+        </div>
     </div>
 
-    <div style="text-align: center;">
-        <button class="btn-search" onclick="ouvrirModalAjout()">🔍 Ajouter une fiche existante</button>
+    <!-- Message si non connecté -->
+    <div id="notConnectedMessage" style="display: block; text-align: center; padding: 40px; background: #fff5f5; border-radius: 12px; border: 2px solid #c41e3a; margin-top: 40px;">
+        <p style="font-size: 1.1em; color: #c41e3a; margin-bottom: 15px;">🔐 Veuillez vous connecter avec Google pour créer ou ajouter des fiches</p>
+        <a href="generateur.html" class="back-button" style="display: inline-block; background: #c41e3a;">🔒 Aller à la connexion</a>
     </div>
 </div>
 
@@ -598,6 +607,29 @@
         });
         afficherFichesRecentes();
     });
+
+    window.onload = function() {
+        // Vérifier si l'utilisateur est connecté via Google
+        const userEmail = sessionStorage.getItem('userEmail');
+        const buttonsSection = document.getElementById('buttonsSection');
+        const infoSection = document.getElementById('infoSection');
+        const notConnectedMessage = document.getElementById('notConnectedMessage');
+        
+        if (userEmail) {
+            // Utilisateur connecté - afficher les boutons
+            buttonsSection.style.display = 'block';
+            infoSection.style.display = 'block';
+            notConnectedMessage.style.display = 'none';
+        } else {
+            // Utilisateur non connecté - masquer les boutons
+            buttonsSection.style.display = 'none';
+            infoSection.style.display = 'none';
+            notConnectedMessage.style.display = 'block';
+        }
+        
+        // Charger et afficher les fiches
+        afficherFichesRecentes();
+    };
 </script>
 
 </body>
