--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index - Fiches de révision NL</title>
+    <title>Kortes nieuwsartikelen</title>
 
     <style>
         * {
@@ -356,8 +356,8 @@
 <body>
 
 <div class="container">
-    <h1>🇳🇱 Index - Fiches de révision</h1>
-    <p class="subtitle">Gérez toutes vos fiches de révision en néerlandais</p>
+    <h1>FR/NL korte nieuwsartikelen</h1>
+    <p class="subtitle">Nieuws in het Nederlands voor Franstaligen (A1)</p>
 
     <!-- Section Fiches Récentes -->
     <div class="section">
