--- a/index.html
+++ b/index.html
@@ -392,17 +392,11 @@
     </div>
 
     <!-- Section Boutons - Affichés seulement si connecté -->
-    <div id="buttonsSection" style="display: none; text-align: center; margin-top: 40px;">
-        <a href="generateur.html" class="back-button">➕ Créer une nouvelle fiche</a>
-    </div>
-
-    <div id="infoSection" style="display: none;">
-        <div class="info-box">
-            ℹ️ <strong>Astuce :</strong> Vous pouvez ajouter manuellement des fiches existantes à la liste en cliquant sur le bouton ci-dessous.
-        </div>
-
-        <div style="text-align: center;">
-            <button class="btn-search" onclick="ouvrirModalAjout()">🔍 Ajouter une fiche existante</button>
+    <div id="adminMenu" style="display: none; margin-top: 40px; padding: 20px; background: linear-gradient(135deg, #fff5f5 0%, #ffe6e6 100%); border-radius: 12px; border: 2px solid #c41e3a;">
+        <h2 style="color: #c41e3a; margin-bottom: 20px; text-align: center;">⚙️ Menu Administrateur</h2>
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
+            <a href="generateur.html" class="back-button" style="text-align: center; background: #c41e3a; display: flex; align-items: center; justify-content: center;">➕ Créer une fiche</a>
+            <button class="btn-search" onclick="ouvrirModalAjout()" style="background: #4ecdc4; color: white; padding: 14px 30px; border: none; border-radius: 8px; cursor: pointer; font-size: 1.05em; font-weight: bold;">🔍 Ajouter une fiche</button>
         </div>
     </div>
 
@@ -611,19 +605,16 @@
     window.onload = function() {
         // Vérifier si l'utilisateur est connecté via Google
         const userEmail = sessionStorage.getItem('userEmail');
-        const buttonsSection = document.getElementById('buttonsSection');
-        const infoSection = document.getElementById('infoSection');
+        const adminMenu = document.getElementById('adminMenu');
         const notConnectedMessage = document.getElementById('notConnectedMessage');
         
         if (userEmail) {
-            // Utilisateur connecté - afficher les boutons
-            buttonsSection.style.display = 'block';
-            infoSection.style.display = 'block';
+            // Utilisateur connecté - afficher le menu admin
+            adminMenu.style.display = 'block';
             notConnectedMessage.style.display = 'none';
         } else {
-            // Utilisateur non connecté - masquer les boutons
-            buttonsSection.style.display = 'none';
-            infoSection.style.display = 'none';
+            // Utilisateur non connecté - masquer le menu admin
+            adminMenu.style.display = 'none';
             notConnectedMessage.style.display = 'block';
         }
         
