--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         <div class="navbar-buttons">
             <a href="index.html" class="navbar-link">🏠 Accueil</a>
             <a href="admin.html" class="navbar-link admin" id="adminLink" style="display: none;">⚙️ Admin</a>
-            <a href="generateur.html" class="navbar-link" id="genLink" style="display: none;">✏️ Créer</a>
+            <a href="generateur.html" class="navbar-link">✏️ Créer</a>
             <div class="navbar-right">
                 <span class="user-info" id="userDisplay" style="display: none;">
                     <span id="userEmail"></span>
@@ -457,7 +457,7 @@
     <div class="section">
         <h2>📚 Fiches Récentes</h2>
         <div class="fiches-grid" id="fichesRecentes">
-            <div class="empty-state">Aucune fiche créée pour le moment. <a href="generateur.html">Créer une fiche</a></div>
+            <div class="empty-state">Aucune fiche créée voor le moment. <a href="generateur.html">Créer une fiche</a></div>
         </div>
     </div>
 
