--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         <div class="navbar-buttons">
             <a href="index.html" class="navbar-link">🏠 Accueil</a>
             <a href="admin.html" class="navbar-link admin" id="adminLink" style="display: none;">⚙️ Admin</a>
-            <a href="generateur.html" class="navbar-link">✏️ Créer</a>
+            <a href="generateur.html" class="navbar-link" id="genLink" style="display: none;">✏️ Créer</a>
             <div class="navbar-right">
                 <span class="user-info" id="userDisplay" style="display: none;">
                     <span id="userEmail"></span>
