--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
         .fiches-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 15px;
             margin-bottom: 30px;
         }
 
@@ -425,6 +425,14 @@
         #userEmail {
             color: #4ecdc4;
             font-weight: bold;
+        }
+
+        .fiche-image {
+            width: 100%;
+            height: 120px;
+            object-fit: cover;
+            border-radius: 8px 8px 0 0;
+            margin: -25px -25px 15px -25px;
         }
     </style>
 </head>
