--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             border-left: 5px solid #c41e3a;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             position: relative;
+            font-size: 0.85em; /* Ajouté pour réduire la taille globale du texte */
         }
 
         .fiche-card:hover {
@@ -140,14 +141,14 @@
 
         .fiche-card h3 {
             color: #c41e3a;
-            font-size: 1.2em;
+            font-size: 1em; /* Réduit depuis 1.2em */
             margin-bottom: 10px;
             word-break: break-word;
         }
 
         .fiche-card p {
             color: #666;
-            font-size: 0.95em;
+            font-size: 0.85em; /* Réduit depuis 0.95em */
             margin: 8px 0;
         }
 
@@ -157,7 +158,7 @@
         }
 
         .fiche-card .date {
-            font-size: 0.9em;
+            font-size: 0.8em; /* Réduit depuis 0.9em */
             color: #888;
         }
 
