stockage des articles sur un json

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
     <!-- Section Fiches Récentes -->
     <div class="section">
-        <h2>📚 Fiches Récentes</h2>
+        <h2>📚 Recente artikelen</h2>
         <div class="fiches-grid" id="fichesRecentes">
             <div class="empty-state">Aucune fiche créée voor le moment. <a href="generateur.html">Créer une fiche</a></div>
         </div>
@@ -472,7 +472,7 @@
 
     <!-- Section Recherche -->
     <div class="section">
-        <h2>🔍 Rechercher une fiche</h2>
+        <h2>🔍 Zoeken</h2>
         <div class="search-section">
             <div class="search-filters">
                 <div class="filter-group">
