--- a/index.html
+++ b/index.html
@@ -493,6 +493,12 @@
             </div>
         </div>
     </div>
+
+    <!-- Section Carte des articles -->
+    <div class="section">
+        <h2>🗺️ Carte des articles</h2>
+        <div id="map" style="width:100%;max-width:600px;height:400px;margin:auto;border-radius:12px;overflow:hidden;"></div>
+    </div>
 </div>
 
 <script>
@@ -666,11 +672,42 @@
         afficherFichesRecentes();
     }
 
+    // Google Maps
+    const villesNL = {
+        "Nijmegen": { lat: 51.842, lng: 5.852 },
+        "Rotterdam": { lat: 51.922, lng: 4.479 },
+        "Den Haag": { lat: 52.070, lng: 4.300 }
+        // Ajoute d'autres villes ici si besoin
+    };
+
+    async function afficherMarqueursGoogleMap() {
+        const articles = await chargerFichesFromJSON();
+        const map = new google.maps.Map(document.getElementById('map'), {
+            center: { lat: 52.1, lng: 5.2 },
+            zoom: 8,
+            mapTypeId: 'roadmap'
+        });
+
+        articles.forEach(article => {
+            const ville = article.region;
+            const coords = villesNL[ville];
+            if (coords) {
+                const marker = new google.maps.Marker({
+                    position: coords,
+                    map: map,
+                    title: `${article.region} (${article.date})`
+                });
+                marker.addListener('click', () => window.open(article.href, '_blank'));
+            }
+        });
+    }
+
     window.onload = function() {
         updateNavbar();
         afficherFichesRecentes();
+        afficherMarqueursGoogleMap();
     };
 </script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js"></script>
 </body>
 </html>
