ajout article amsterdam

--- a/index.html
+++ b/index.html
@@ -676,7 +676,8 @@
     const villesNL = {
         "Nijmegen": { lat: 51.842, lng: 5.852 },
         "Rotterdam": { lat: 51.922, lng: 4.479 },
-        "Den Haag": { lat: 52.070, lng: 4.300 }
+        "Den Haag": { lat: 52.070, lng: 4.300 },
+        "Amsterdam": { lat: 52.370, lng: 4.895 }
         // Ajoute d'autres villes ici si besoin
     };
 
