--- a/index.html
+++ b/index.html
@@ -677,7 +677,8 @@
         "Nijmegen": { lat: 51.842, lng: 5.852 },
         "Rotterdam": { lat: 51.922, lng: 4.479 },
         "Den Haag": { lat: 52.070, lng: 4.300 },
-        "Amsterdam": { lat: 52.370, lng: 4.895 }
+        "Amsterdam": { lat: 52.370, lng: 4.895 },
+    "Leeuwarden": { lat: 53.201, lng: 5.799 }
         // Ajoute d'autres villes ici si besoin
     };
 
