ajout révision imparfait

--- a/revision_imparfait.html
+++ b/revision_imparfait.html
@@ -120,12 +120,36 @@
 <div class="container">
     <h1>Révision de l’imparfait néerlandais</h1>
     <p class="subtitle">Entraîne-toi à retrouver le radical et l’imparfait des verbes néerlandais</p>
-    <div class="aide_memoire">
-        <strong>Aide-mémoire :</strong><br>
-        Pour choisir entre <b>te(n)</b> et <b>de(n)</b> à l’imparfait, regarde la dernière lettre du radical travaillé.<br>
-        Si elle est dans <b>’t Kofschip + X</b> (ou <b>SoFT KeTCHuP + X</b>), c’est <b>te(n)</b>.<br>
-        Sinon, c’est <b>de(n)</b>.<br>
-        <span style="color:#888;">(Exemples : werken → werkte, leven → leefde)</span>
+    <div class="aide-memoire">
+        <strong>On distingue :</strong><br>
+        <b>VERBES RÉGULIERS (faibles)</b> : <i>Pas de changement de voyelle du radical au présent et à l’imparfait.</i><br>
+        <span style="color:#1976d2;">Exemples : werken → ik werk → ik werkte, wij werkten<br>
+        leven → ik leef → ik leefde, wij leefden<br>
+        horen → ik hoor → ik hoorde, wij hoorden</span>
+        <br><br>
+        <b>VERBES IRRÉGULIERS (forts)</b> : <i>Changement de voyelle du radical au présent et à l’imparfait.</i><br>
+        <span style="color:#1976d2;">Exemples : denken → ik denk → ik dacht, wij dachten<br>
+        nemen → ik neem → ik nam, wij namen<br>
+        gaan → ik ga → ik ging, wij gingen</span>
+        <br><br>
+        <b>Pour savoir si un verbe est régulier ou irrégulier :</b> il faut l’apprendre par cœur ou consulter le dictionnaire.
+        <br><br>
+        <b>Conjugaison de l’imparfait :</b><br>
+        - Deux formes : singulier (ik werkte) et pluriel (wij werkten)<br>
+        - L’imparfait des verbes réguliers se termine par <b>-te(n)</b> ou <b>-de(n)</b> :<br>
+        <span style="color:#1976d2;">ik werkTE / wij werkTEN — ik leefDE / wij leefDEN</span>
+        <br><br>
+        <b>Comment choisir -te(n) ou -de(n) ?</b><br>
+        - Prends le <b>radical brut</b> (infinitif sans -en ou -n).<br>
+        - Si la dernière lettre du radical est dans <b>T K F S CH P + X</b> (mnémo : <b>’t Kofschip + X</b> ou <b>SoFT KeTCHuP + X</b>), c’est <b>-te(n)</b>.<br>
+        - Sinon, c’est <b>-de(n)</b>.<br>
+        <span style="color:#888;">Ex : werken → werkte, leven → leefde</span>
+        <br><br>
+        <b>Remarques orthographiques :</b><br>
+        - Pour la 1ère personne du présent, attention aux changements de consonnes (v → f, z → s).<br>
+        - Ex : reizen → ik reis ; durven → ik durf ; leven → ik leef.<br>
+        - Syllabe fermée : voyelle brève (pen/nen), voyelle longue (boom, deux « o »).<br>
+        - Syllabe ouverte : voyelle longue, une seule lettre (nemen).
     </div>
     <form id="setupForm">
         <label>Nombre de verbes à réviser :
